--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,6 @@
 * linguist-vendored=false
+*.md linguist-vendored=false
+*.md linguist-generated=false
+*.md linguist-documentation=false
+*.md linguist-detectable=true
 _includes/* linguist-vendored
