--- a/.gitattributes
+++ b/.gitattributes
@@ -1,7 +1,10 @@
 * linguist-vendored=false
+
 *.md linguist-vendored=false
 *.md linguist-generated=false
 *.md linguist-documentation=false
 *.md linguist-detectable=true
+
 _includes/* linguist-vendored
-docker* linguist-vendored
+docker-compose.yml linguist-vendored
+Dockerfile linguist-vendored
